welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:8: error: type mismatch;
 found   : Unit
 required: Boolean
    if (cigars >= 40){
    ^